tests/baselines/reference/computedPropertyNames23_ES5(target=es2015).errors.txt
computedPropertyNames23_ES5.ts(6,12): error TS2465: 'this' cannot be referenced in a computed property name.


==== computedPropertyNames23_ES5.ts (1 errors) ====
    class C {
        bar() {
            return 0;
        }
        [
            { [this.bar()]: 1 }[0]
               ~~~~
!!! error TS2465: 'this' cannot be referenced in a computed property name.
        ]() { }
    }